# CS405-Assignments

./: .gitignore  6-2_ProjectOne-Policy_ejones.docx  8-2_Journal_ejones.docx  README.md
module_1/: 1-3_NumericOverflowCoding_ejones.docx  CS 405 Module One Numeric Overflow Source Code.cpp
module_2/2-1_DefenceInDepth/: 2-1_Journal_DiD_ejones.docx
module_2/2-2_SQLInjectionCoding/: 2-2_SQLInjectionCoding_ejones.docx  SQLInjection.cpp
module_2/2-3_BufferOverflowCoding/: 2-3_BufferOverflowCoding_ejones.docx  BufferOverflow.cpp
module_3/: 3-2_Milestone_ejones.docx
module_4/4-1_Exceptions/: 4-1_Exceptions_ejones.docx  Exceptions.cpp
module_4/4-2_UnitTesting/: 4-2_UnitTesting_ejones.docx  CMakeLists.txt  buildandrun.sh  test.cpp
module_5/5-1_CaseStudy/: 5-1_CaseStudy_ejones.docx
module_5/5-2_EncryptionCoding/: 5-2_EncryptionCoding_ejones.docx  Encryption.cpp  decrypteddatafile.txt  decrytpteddatafile.txt  encrypteddatafile.txt
module_5/5-3_StaticCodeAnalysis/: 5-3_StaticCodeAnalysis_ejones.docx  QuestionableCode.cpp  clang-tidy-result.txt  cppcheck-result.xml
module_6/: 6-1_Journal_ejones.docx
module_7/: 7-1_Journal_ejones.docx  7-2_ProjectTwo-Presentation_ejones.pptx  7-2_ProjectTwo-Transcript_ejones.docx
